[package]
name = "web-eid"
version = "0.0.0"
edition = "2024"
description = "Web eID client for authentication and signing"
license = "Apache-2.0"
homepage = "https://github.com/takakv/web-eid"
repository = "https://github.com/takakv/web-eid"
keywords = ["webeid", "web-eid", "esteid"]
categories = ["cryptography"]

[dependencies]
